--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -12,22 +12,16 @@
             <div>
                 <br>
                 <h2>Contact</h2>
-
                 <img src="Images/Portrait.png" class="imgSmall" alt="Contact">
 
-
-                <p class="sh1"> Pour une première prise de contact, exprimer un besoin ou simplement échanger</p>
-
                 <h3>Mail</h3>
-
                 <span class="oi oi-envelope-closed" aria-hidden="true"></span>
                 <div>
-                    <a>michael.vacarella[at]pm.me</a>
+                    <a>michael.vacarella@pm.me</a>
                 </div>
 
 
                 <h3>LinkedIn</h3>
-
                 <span class="oi oi-people" aria-hidden="true"></span>
                 <div>
                     <a href="https://www.linkedin.com/in/mvacarella">mvacarella</a>
