--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -218,14 +218,21 @@ img {
 }
 
 
-textarea {
+.TextBig {
     width: 50%;
     height: 150px;
-    padding: 12px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    background-color: #f8f8f8;
+    resize: none;
+}
+
+.TextSmall {
+    width: 50%;
+    height: 2em;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
     resize: none;
 }
 
