--- a/Shared/SimpleLayout.razor
+++ b/Shared/SimpleLayout.razor
@@ -7,12 +7,18 @@
 
     <main>
         <article class="content px-4">
+
             @Body
+
+
             <h3>Vous utilisez la méthode SIMPLE ?</h3>
             <span class="oi oi-heart" aria-hidden="true"></span>
             <div class="bgDiv">
-                <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun puisse l'utiliser. 
-                    Si vous appréciez la plus-value qu'apporte cette méthode au quotidien, n'hésitez pas à faire un don sur ce wallet </a>
+                <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris
+                    sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun
+                    puisse l'utiliser.
+                    Si vous appréciez la plus-value qu'apporte cette méthode au quotidien, n'hésitez pas à faire un don
+                    sur ce wallet </a>
                 <a href="https://etherscan.io/address/0xcC424e30Ff6eEAb4E6B3A900c5446038F858b314">Ethereum</a>
             </div>
 
@@ -20,6 +26,11 @@
             <span class="oi oi-badge" aria-hidden="true"></span>
             <div>
                 <a>GPL-3.0 license</a>
+            </div>
+            <br><br>
+            <div class="loadBox">
+                <i>les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et
+                    les fonctionnalités qui lui seront prochainement associées</i>
             </div>
         </article>
     </main>
