--- a/Shared/SimpleLayout.razor
+++ b/Shared/SimpleLayout.razor
@@ -29,7 +29,7 @@
             </div>
             <br><br>
             <div class="loadBox">
-                <i>les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et
+                <i>Les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et
                     les fonctionnalités qui lui seront prochainement associées</i>
             </div>
         </article>
